--- a/javafx-module/src/main/resources/main.fxml
+++ b/javafx-module/src/main/resources/main.fxml
@@ -3,12 +3,13 @@
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="ru.nsu.usova.dipl.controller.MainViewController">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="544.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="ru.nsu.usova.dipl.controller.MainViewController">
   <children>
-    <AnchorPane prefHeight="400.0" prefWidth="600.0">
+    <AnchorPane layoutX="0.0" layoutY="0.0" prefHeight="544.0" prefWidth="900.0">
       <children>
-        <MenuBar id="menu" prefHeight="38.0" prefWidth="600.0">
+        <MenuBar id="menu" layoutX="0.0" layoutY="0.0" minHeight="31.0" prefHeight="31.0" prefWidth="900.0">
           <menus>
             <Menu id="text" mnemonicParsing="false" text="Загрузить текст">
               <items>
@@ -23,16 +24,18 @@
             </Menu>
           </menus>
         </MenuBar>
-        <TabPane id="main" layoutY="38.0" prefHeight="358.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE">
+        <TabPane id="main" layoutX="0.0" layoutY="38.0" prefHeight="503.0" prefWidth="900.0" tabClosingPolicy="UNAVAILABLE">
           <tabs>
             <Tab text="Поиск">
               <AnchorPane id="Content" minHeight="0.0" minWidth="0.0" prefHeight="310.0000999999975" prefWidth="600.0">
-                <TextField fx:id="statement" layoutX="76.0" layoutY="57.0" prefWidth="366.0" />
-                <Button layoutX="472.0" layoutY="55.0" mnemonicParsing="false" onMouseClicked="#searchForArguments" text="" />
-                <Label layoutX="76.0" layoutY="14.0" prefWidth="332.0" text="Поиск аргументации для утверждения" />
-                <ScrollPane layoutY="102.0" prefHeight="208.0" prefWidth="600.0">
-                  <AnchorPane fx:id="tablePane" minHeight="0.0" minWidth="0.0" prefHeight="305.0" prefWidth="599.0" />
-                </ScrollPane>
+                <StackPane fx:id="stackPane" layoutX="0.0" layoutY="123.0" prefHeight="318.0" prefWidth="900.0" />
+                <TextField fx:id="statement" layoutX="76.0" layoutY="57.0" prefHeight="24.0" prefWidth="504.0" />
+                <Button layoutX="633.0" layoutY="57.0" minHeight="24.0" minWidth="26.0" mnemonicParsing="false" onMouseClicked="#searchForArguments" prefHeight="24.0" prefWidth="26.0" text="" />
+                <Label layoutX="76.0" layoutY="14.0" prefWidth="436.0" text="Поиск аргументации для утверждения">
+                  <font>
+                    <Font size="18.0" />
+                  </font>
+                </Label>
               </AnchorPane>
             </Tab>
           </tabs>
