--- a/javafx-module/src/main/resources/main.fxml
+++ b/javafx-module/src/main/resources/main.fxml
@@ -13,8 +13,8 @@
           <menus>
             <Menu id="text" mnemonicParsing="false" text="Загрузить текст">
               <items>
-                <MenuItem id="file" mnemonicParsing="false" text="Открыть файл" />
-                <MenuItem id="insert_text" mnemonicParsing="false" text="Вставить текст" />
+                <MenuItem fx:id="file" mnemonicParsing="false" text="Открыть файл" />
+                <MenuItem fx:id="insert_text" onAction="#openInsertTextTab" mnemonicParsing="false" text="Вставить текст" />
               </items>
             </Menu>
             <Menu id="help" mnemonicParsing="false" text="Справка">
@@ -24,7 +24,7 @@
             </Menu>
           </menus>
         </MenuBar>
-        <TabPane id="main" layoutX="0.0" layoutY="38.0" prefHeight="503.0" prefWidth="900.0" tabClosingPolicy="UNAVAILABLE">
+        <TabPane fx:id="tabs" id="main" layoutX="0.0" layoutY="38.0" prefHeight="503.0" prefWidth="900.0" tabClosingPolicy="UNAVAILABLE">
           <tabs>
             <Tab text="Поиск">
               <AnchorPane id="Content" minHeight="0.0" minWidth="0.0" prefHeight="310.0000999999975" prefWidth="600.0">
