--- a/javafx-module/src/main/resources/load_single_text.fxml
+++ b/javafx-module/src/main/resources/load_single_text.fxml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
+
 <AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="503.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="ru.nsu.usova.dipl.controller.LoadSingleTextController">
   <children>
-    <Button fx:id="load" onMouseClicked="#loadText" layoutX="629.0" layoutY="413.0" mnemonicParsing="false" prefWidth="191.0" text="Загрузить текст" />
-    <TextArea fx:id="loadingText" layoutX="77.0" layoutY="86.0" prefHeight="300.0" prefWidth="743.0" wrapText="true" />
-    <Label fx:id="message" layoutX="77.0" layoutY="394.0" prefHeight="68.0" prefWidth="243.0" text="Извлечено аргументов: 0" />
+    <Button fx:id="load" layoutX="629.0" layoutY="386.0" mnemonicParsing="false" onMouseClicked="#loadText" prefWidth="191.0" text="Загрузить текст" />
+    <TextArea fx:id="loadingText" layoutX="77.0" layoutY="46.0" prefHeight="300.0" prefWidth="743.0" wrapText="true" />
+    <Label fx:id="message" layoutX="77.0" layoutY="386.0" prefHeight="32.0" prefWidth="243.0" text="Извлечено аргументов: 0" />
   </children>
 </AnchorPane>
