--- a/javafx-module/src/main/resources/open_file.fxml
+++ b/javafx-module/src/main/resources/open_file.fxml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
-
 <AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="503.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="ru.nsu.usova.dipl.controller.OpenFileController">
   <children>
     <StackPane fx:id="stackPane" layoutX="0.0" layoutY="148.0" prefHeight="279.0" prefWidth="900.0">
@@ -14,7 +11,7 @@
       </children>
     </StackPane>
     <Label layoutX="86.0" layoutY="109.0" minHeight="21.0" prefHeight="21.0" prefWidth="182.0" text="Выбранный файл:" />
-    <Button layoutX="673.0" layoutY="437.0" mnemonicParsing="false" text="Загрузить файл" />
+    <Button onMouseClicked="#openFileSendText" layoutX="673.0" layoutY="437.0" mnemonicParsing="false" text="Загрузить файл" />
     <TextField fx:id="fileName" layoutX="300.0" layoutY="109.0" prefWidth="530.0" />
     <Label layoutX="86.0" layoutY="37.0" prefHeight="26.0" prefWidth="743.0" text="Выберете файл, который необходимо загрузить для извлечения аргументов" />
     <Label layoutX="86.0" layoutY="450.0" text="Из файла извлечено аргументов:" />
