--- a/javafx-module/src/main/resources/view_all.fxml
+++ b/javafx-module/src/main/resources/view_all.fxml
@@ -1,28 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
+<?import javafx.scene.layout.StackPane?>
+
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="544.0" prefWidth="893.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="ru.nsu.usova.dipl.controller.AllArgumentsController">
   <children>
-    <AnchorPane layoutX="0.0" layoutY="0.0" prefHeight="400.0" prefWidth="600.0">
+    <AnchorPane layoutX="0.0" layoutY="0.0" prefHeight="544.0" prefWidth="900.0">
       <children>
-        <Button id="refresh" layoutX="445.0" layoutY="26.0" mnemonicParsing="false" text="Обновить" />
+        <Button id="refresh" layoutX="417.0" layoutY="26.0" mnemonicParsing="false" onMouseClicked="#loadAllArguments" prefHeight="36.0" text="Обновить" />
         <Label layoutX="53.0" layoutY="30.0" text="Просмотр всех сохраненных аргументов" />
-        <ScrollPane layoutX="0.0" layoutY="94.0" prefHeight="306.0" prefWidth="600.0">
-          <content>
-            <AnchorPane id="Content" minHeight="0.0" minWidth="0.0" prefHeight="305.0" prefWidth="599.0">
-              <children>
-                <TableView layoutX="0.0" layoutY="0.0" prefHeight="284.0" prefWidth="585.0">
-                  <columns>
-                    <TableColumn id="premise" maxWidth="5000.0" minWidth="10.0" prefWidth="264.0" text="Условие" />
-                    <TableColumn id="result" maxWidth="5000.0" minWidth="10.0" prefWidth="260.0" text="Вывод" />
-                    <TableColumn id="result" maxWidth="5000.0" minWidth="10.0" prefWidth="57.0" text="id" />
-                  </columns>
-                </TableView>
-              </children>
-            </AnchorPane>
-          </content>
-        </ScrollPane>
+        <StackPane fx:id="stackPane" layoutX="0.0" layoutY="123.0" prefHeight="318.0" prefWidth="900.0" />
       </children>
     </AnchorPane>
   </children>
