--- a/javafx-module/src/main/resources/open_file.fxml
+++ b/javafx-module/src/main/resources/open_file.fxml
@@ -1,20 +1,111 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.StackPane?>
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="503.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="ru.nsu.usova.dipl.controller.OpenFileController">
-  <children>
-    <StackPane fx:id="stackPane" layoutX="0.0" layoutY="148.0" prefHeight="279.0" prefWidth="900.0">
-      <children>
-        <ListView fx:id="files" prefHeight="200.0" prefWidth="200.0" />
-      </children>
-    </StackPane>
-    <Label layoutX="86.0" layoutY="109.0" minHeight="21.0" prefHeight="21.0" prefWidth="182.0" text="Выбранный файл:" />
-    <Button onMouseClicked="#openFileSendText" layoutX="673.0" layoutY="437.0" mnemonicParsing="false" text="Загрузить файл" />
-    <TextField fx:id="fileName" layoutX="300.0" layoutY="109.0" prefWidth="530.0" />
-    <Label layoutX="86.0" layoutY="37.0" prefHeight="26.0" prefWidth="743.0" text="Выберете файл, который необходимо загрузить для извлечения аргументов" />
-    <Label layoutX="86.0" layoutY="450.0" text="Из файла извлечено аргументов:" />
-    <Label fx:id="argumentsCount" layoutX="405.0" layoutY="450.0" prefWidth="42.0" text="" />
-  </children>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Button?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ListView?>
+<AnchorPane prefHeight="503.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1"
+            xmlns="http://javafx.com/javafx/2.2" fx:controller="ru.nsu.usova.dipl.controller.OpenFileController">
+    <children>
+        <HBox prefHeight="495.0" prefWidth="900.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+              AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <children>
+                <GridPane gridLinesVisible="true" prefHeight="503.0" prefWidth="900.0" HBox.hgrow="ALWAYS">
+                    <children>
+                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="0" GridPane.rowIndex="1">
+                            <children>
+                                <AnchorPane prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+                                    <children>
+                                        <StackPane fx:id="stackPane" prefHeight="279.0" prefWidth="900.0"
+                                                   AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                                                   AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                            <children>
+                                                <ListView fx:id="files" prefHeight="200.0" prefWidth="200.0"
+                                                          AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                                                          AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
+                                            </children>
+                                        </StackPane>
+                                    </children>
+                                </AnchorPane>
+                            </children>
+                        </VBox>
+                        <GridPane GridPane.columnIndex="0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="0"
+                                  GridPane.vgrow="ALWAYS">
+                            <children>
+                                <Label minHeight="21.0" prefHeight="30.0" prefWidth="265.0" text="Выбранный файл:"
+                                       GridPane.columnIndex="0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2"
+                                       GridPane.vgrow="ALWAYS">
+                                    <GridPane.margin>
+                                        <Insets left="10.0" right="10.0" fx:id="x1"/>
+                                    </GridPane.margin>
+                                </Label>
+                                <TextField fx:id="fileName" prefWidth="530.0" GridPane.columnIndex="1"
+                                           GridPane.hgrow="ALWAYS" GridPane.margin="$x1" GridPane.rowIndex="2"
+                                           GridPane.vgrow="ALWAYS"/>
+                                <Label alignment="CENTER_RIGHT" minHeight="21.0" prefHeight="30.0" prefWidth="601.0"
+                                       text="Выберете файл," textAlignment="CENTER" GridPane.columnIndex="0"
+                                       GridPane.halignment="RIGHT" GridPane.hgrow="ALWAYS" GridPane.rowIndex="0"
+                                       GridPane.vgrow="ALWAYS">
+                                    <font>
+                                        <Font size="20.0" fx:id="x2"/>
+                                    </font>
+                                </Label>
+                                <Label font="$x2" prefHeight="74.0" prefWidth="601.0"
+                                       text=" который необходимо загрузить для извлечения аргументов"
+                                       textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="LEFT"
+                                       GridPane.hgrow="ALWAYS" GridPane.rowIndex="0" GridPane.vgrow="ALWAYS"/>
+                            </children>
+                            <columnConstraints>
+                                <ColumnConstraints hgrow="ALWAYS" maxWidth="447.0" minWidth="10.0" prefWidth="289.0"/>
+                                <ColumnConstraints hgrow="ALWAYS" maxWidth="678.0" minWidth="10.0" prefWidth="611.0"/>
+                            </columnConstraints>
+                            <rowConstraints>
+                                <RowConstraints maxHeight="50.0" minHeight="10.0" prefHeight="50.0" vgrow="ALWAYS"/>
+                                <RowConstraints maxHeight="49.0" minHeight="10.0" prefHeight="49.0" vgrow="ALWAYS"/>
+                                <RowConstraints maxHeight="49.0" minHeight="10.0" prefHeight="49.0" vgrow="ALWAYS"/>
+                            </rowConstraints>
+                        </GridPane>
+                        <GridPane GridPane.columnIndex="0" GridPane.rowIndex="2">
+                            <children>
+                                <Label text="Из файла извлечено аргументов:" GridPane.columnIndex="0"
+                                       GridPane.hgrow="ALWAYS" GridPane.rowIndex="1"
+                                       GridPane.vgrow="ALWAYS"/>
+                                <Label fx:id="argumentsCount" prefWidth="42.0" GridPane.columnIndex="1"
+                                       GridPane.rowIndex="1"/>
+                                <Button contentDisplay="TOP" mnemonicParsing="false" onMouseClicked="#openFileSendText"
+                                        text="Загрузить файл" GridPane.columnIndex="2" GridPane.halignment="RIGHT"
+                                        GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER"
+                                        GridPane.vgrow="ALWAYS">
+                                    <GridPane.margin>
+                                        <Insets left="20.0" right="20.0"/>
+                                    </GridPane.margin>
+                                </Button>
+                            </children>
+                            <columnConstraints>
+                                <ColumnConstraints hgrow="ALWAYS" maxWidth="449.0" minWidth="10.0" prefWidth="357.0"/>
+                                <ColumnConstraints hgrow="ALWAYS" maxWidth="497.0" minWidth="10.0" prefWidth="111.0"/>
+                                <ColumnConstraints hgrow="ALWAYS" maxWidth="497.0" minWidth="10.0" prefWidth="432.0"/>
+                            </columnConstraints>
+                            <rowConstraints>
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS"/>
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS"/>
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS"/>
+                            </rowConstraints>
+                        </GridPane>
+                    </children>
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0"/>
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints maxHeight="165.0" minHeight="10.0" prefHeight="148.0" vgrow="ALWAYS"/>
+                        <RowConstraints maxHeight="279.0" minHeight="10.0" prefHeight="279.0" vgrow="ALWAYS"/>
+                        <RowConstraints maxHeight="165.0" minHeight="10.0" prefHeight="68.0" vgrow="ALWAYS"/>
+                    </rowConstraints>
+                </GridPane>
+            </children>
+        </HBox>
+    </children>
 </AnchorPane>
