--- a/javafx-module/src/main/resources/view_all.fxml
+++ b/javafx-module/src/main/resources/view_all.fxml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
-
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="544.0" prefWidth="893.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="ru.nsu.usova.dipl.controller.AllArgumentsController">
-  <children>
-    <AnchorPane layoutX="0.0" layoutY="0.0" prefHeight="544.0" prefWidth="900.0">
-      <children>
-        <Button id="refresh" layoutX="417.0" layoutY="26.0" mnemonicParsing="false" onMouseClicked="#loadAllArguments" prefHeight="36.0" text="Обновить" />
-        <Label layoutX="53.0" layoutY="30.0" text="Просмотр всех сохраненных аргументов" />
-        <StackPane fx:id="stackPane" layoutX="0.0" layoutY="123.0" prefHeight="318.0" prefWidth="900.0" />
-      </children>
-    </AnchorPane>
-  </children>
+<AnchorPane xmlns="http://javafx.com/javafx"
+            xmlns:fx="http://javafx.com/fxml"
+            fx:controller="ru.nsu.usova.dipl.controller.AllArgumentsController"
+            prefHeight="400.0" prefWidth="600.0">
+    <children>
+        <AnchorPane layoutX="0.0" layoutY="0.0" prefHeight="544.0" prefWidth="900.0">
+            <children>
+                <Button id="refresh" layoutX="417.0" layoutY="26.0" mnemonicParsing="false"
+                        onMouseClicked="#loadAllArguments" prefHeight="36.0" text="Обновить"/>
+                <Label layoutX="53.0" layoutY="30.0" text="Просмотр всех сохраненных аргументов"/>
+                <StackPane fx:id="stackPane" layoutX="0.0" layoutY="123.0" prefHeight="318.0" prefWidth="900.0"/>
+            </children>
+        </AnchorPane>
+    </children>
 </AnchorPane>
