--- a/javafx-module/src/main/resources/view_args.fxml
+++ b/javafx-module/src/main/resources/view_args.fxml
@@ -1,24 +1,67 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.*?>
-
+<?import javafx.scene.text.*?>
 <?import javafx.scene.text.Font?>
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="ru.nsu.usova.dipl.controller.SearchController"
-            prefHeight="400.0" prefWidth="600.0">
-    <AnchorPane id="Content" minHeight="0.0" minWidth="0.0" prefHeight="310.0000999999975" prefWidth="600.0">
-        <StackPane fx:id="stackPane" layoutX="0.0" layoutY="123.0" prefHeight="318.0" prefWidth="900.0" />
-        <TextField fx:id="statement" layoutX="76.0" layoutY="57.0" prefHeight="24.0" prefWidth="504.0" />
-        <Button layoutX="633.0" layoutY="57.0" minHeight="24.0" minWidth="26.0" mnemonicParsing="false" onMouseClicked="#searchForArguments" prefHeight="24.0" prefWidth="26.0" text="" />
-        <Label layoutX="76.0" layoutY="14.0" prefWidth="436.0" text="Поиск аргументации для утверждения">
-            <font>
+
+<AnchorPane prefHeight="564.0" prefWidth="948.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="ru.nsu.usova.dipl.controller.SearchController">
+  <children>
+    <HBox id="AnchorPane" prefHeight="503.0" prefWidth="900.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <children>
+        <GridPane prefHeight="503.0" prefWidth="900.0" HBox.hgrow="ALWAYS" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+          <children>
+            <Label minHeight="-Infinity" minWidth="-Infinity" prefWidth="436.0" text="Поиск аргументации для утверждения" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="0" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
+              <font>
                 <Font size="18.0" />
-            </font>
-        </Label>
-    </AnchorPane>
+              </font>
+            </Label>
+            <VBox prefHeight="204.0" prefWidth="600.0" GridPane.columnIndex="0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.vgrow="ALWAYS">
+              <children>
+                <StackPane fx:id="stackPane" prefHeight="176.0" prefWidth="600.0" VBox.vgrow="ALWAYS">
+                  <children>
+                    <TableView fx:id="argumentTable">
+                      <StackPane.margin>
+                        <Insets />
+                      </StackPane.margin>
+                    </TableView>
+                  </children>
+                  <padding>
+                    <Insets />
+                  </padding>
+                </StackPane>
+              </children>
+            </VBox>
+            <TextField fx:id="statement" prefHeight="37.0" prefWidth="498.0" GridPane.columnIndex="0" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="1" GridPane.vgrow="SOMETIMES">
+              <GridPane.margin>
+                <Insets left="10.0" right="50.0" />
+              </GridPane.margin>
+            </TextField>
+            <Button minHeight="24.0" minWidth="26.0" mnemonicParsing="false" onMouseClicked="#searchForArguments" prefHeight="24.0" prefWidth="26.0" text="" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="1" GridPane.vgrow="SOMETIMES">
+              <GridPane.margin>
+                <Insets right="10.0" />
+              </GridPane.margin>
+            </Button>
+          </children>
+          <columnConstraints>
+            <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="734.0" />
+          </columnConstraints>
+          <rowConstraints>
+            <RowConstraints maxHeight="336.0" minHeight="10.0" prefHeight="47.0" vgrow="ALWAYS" />
+            <RowConstraints maxHeight="410.0" minHeight="10.0" prefHeight="51.0" vgrow="ALWAYS" />
+            <RowConstraints maxHeight="363.0" minHeight="10.0" prefHeight="363.0" vgrow="ALWAYS" />
+          </rowConstraints>
+          <HBox.margin>
+            <Insets />
+          </HBox.margin>
+        </GridPane>
+      </children>
+    </HBox>
+  </children>
 </AnchorPane>
