--- a/javafx-module/src/main/resources/view_all.fxml
+++ b/javafx-module/src/main/resources/view_all.fxml
@@ -1,21 +1,67 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.StackPane?>
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="ru.nsu.usova.dipl.controller.AllArgumentsController"
-            prefHeight="400.0" prefWidth="600.0">
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.Font?>
+<AnchorPane prefHeight="564.0" prefWidth="948.0" xmlns:fx="http://javafx.com/fxml/1"
+            xmlns="http://javafx.com/javafx/2.2" fx:controller="ru.nsu.usova.dipl.controller.AllArgumentsController">
     <children>
-        <AnchorPane layoutX="0.0" layoutY="0.0" prefHeight="544.0" prefWidth="900.0">
+        <HBox id="AnchorPane" prefHeight="503.0" prefWidth="900.0" AnchorPane.bottomAnchor="0.0"
+              AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
-                <Button id="refresh" layoutX="417.0" layoutY="26.0" mnemonicParsing="false"
-                        onMouseClicked="#loadAllArguments" prefHeight="36.0" text="Обновить"/>
-                <Label layoutX="53.0" layoutY="30.0" text="Просмотр всех сохраненных аргументов"/>
-                <StackPane fx:id="stackPane" layoutX="0.0" layoutY="123.0" prefHeight="318.0" prefWidth="900.0"/>
+                <GridPane prefHeight="503.0" prefWidth="900.0" HBox.hgrow="ALWAYS">
+                    <children>
+                        <Label text="Просмотр всех сохраненных аргументов" GridPane.halignment="CENTER"
+                               GridPane.hgrow="NEVER" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
+                            <font>
+                                <Font size="22.0"/>
+                            </font>
+                            <GridPane.margin>
+                                <Insets bottom="10.0" top="10.0"/>
+                            </GridPane.margin>
+                        </Label>
+                        <VBox prefHeight="204.0" prefWidth="600.0" GridPane.columnIndex="0" GridPane.hgrow="ALWAYS"
+                              GridPane.rowIndex="2" GridPane.vgrow="ALWAYS">
+                            <children>
+                                <StackPane fx:id="stackPane" prefHeight="176.0" prefWidth="600.0" VBox.vgrow="ALWAYS">
+                                    <children>
+                                        <TableView fx:id="argumentTable">
+                                            <StackPane.margin>
+                                                <Insets/>
+                                            </StackPane.margin>
+                                        </TableView>
+                                    </children>
+                                    <padding>
+                                        <Insets/>
+                                    </padding>
+                                </StackPane>
+                            </children>
+                        </VBox>
+                        <Button id="refresh" mnemonicParsing="false" onMouseClicked="#loadAllArguments"
+                                prefHeight="36.0" text="Обновить" GridPane.columnIndex="0" GridPane.halignment="RIGHT"
+                                GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER"
+                                GridPane.vgrow="ALWAYS">
+                            <GridPane.margin>
+                                <Insets bottom="20.0" left="10.0" right="50.0"/>
+                            </GridPane.margin>
+                        </Button>
+                    </children>
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="734.0"/>
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="65.0" vgrow="ALWAYS"/>
+                        <RowConstraints minHeight="10.0" prefHeight="61.0" vgrow="ALWAYS"/>
+                        <RowConstraints minHeight="10.0" prefHeight="438.0" vgrow="ALWAYS"/>
+                    </rowConstraints>
+                    <HBox.margin>
+                        <Insets/>
+                    </HBox.margin>
+                </GridPane>
             </children>
-        </AnchorPane>
+        </HBox>
     </children>
 </AnchorPane>
