--- a/javafx-module/src/main/resources/view_args.fxml
+++ b/javafx-module/src/main/resources/view_args.fxml
@@ -15,12 +15,15 @@
   <children>
     <HBox id="AnchorPane" prefHeight="503.0" prefWidth="900.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <children>
-        <GridPane prefHeight="503.0" prefWidth="900.0" HBox.hgrow="ALWAYS" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <GridPane prefHeight="503.0" prefWidth="900.0" HBox.hgrow="ALWAYS">
           <children>
             <Label minHeight="-Infinity" minWidth="-Infinity" prefWidth="436.0" text="Поиск аргументации для утверждения" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="0" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
               <font>
                 <Font size="18.0" />
               </font>
+              <GridPane.margin>
+                <Insets bottom="10.0" top="10.0" />
+              </GridPane.margin>
             </Label>
             <VBox prefHeight="204.0" prefWidth="600.0" GridPane.columnIndex="0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.vgrow="ALWAYS">
               <children>
@@ -38,9 +41,9 @@
                 </StackPane>
               </children>
             </VBox>
-            <TextField fx:id="statement" prefHeight="37.0" prefWidth="498.0" GridPane.columnIndex="0" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="1" GridPane.vgrow="SOMETIMES">
+            <TextField fx:id="statement" prefHeight="37.0" prefWidth="498.0" GridPane.columnIndex="0" GridPane.hgrow="NEVER" GridPane.rowIndex="1" GridPane.vgrow="SOMETIMES">
               <GridPane.margin>
-                <Insets left="10.0" right="50.0" />
+                <Insets bottom="10.0" left="10.0" right="50.0" top="10.0" />
               </GridPane.margin>
             </TextField>
             <Button minHeight="24.0" minWidth="26.0" mnemonicParsing="false" onMouseClicked="#searchForArguments" prefHeight="24.0" prefWidth="26.0" text="" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="1" GridPane.vgrow="SOMETIMES">
@@ -53,9 +56,9 @@
             <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="734.0" />
           </columnConstraints>
           <rowConstraints>
-            <RowConstraints maxHeight="336.0" minHeight="10.0" prefHeight="47.0" vgrow="ALWAYS" />
-            <RowConstraints maxHeight="410.0" minHeight="10.0" prefHeight="51.0" vgrow="ALWAYS" />
-            <RowConstraints maxHeight="363.0" minHeight="10.0" prefHeight="363.0" vgrow="ALWAYS" />
+            <RowConstraints maxHeight="336.0" minHeight="10.0" prefHeight="46.0" vgrow="ALWAYS" />
+            <RowConstraints maxHeight="410.0" minHeight="10.0" prefHeight="62.0" vgrow="ALWAYS" />
+            <RowConstraints maxHeight="456.0" minHeight="10.0" prefHeight="456.0" vgrow="ALWAYS" />
           </rowConstraints>
           <HBox.margin>
             <Insets />
