--- a/javafx-module/src/main/resources/view_args.fxml
+++ b/javafx-module/src/main/resources/view_args.fxml
@@ -1,70 +1,77 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
 <?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="564.0" prefWidth="948.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="ru.nsu.usova.dipl.controller.SearchController">
-  <children>
-    <HBox id="AnchorPane" prefHeight="503.0" prefWidth="900.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-      <children>
-        <GridPane prefHeight="503.0" prefWidth="900.0" HBox.hgrow="ALWAYS">
-          <children>
-            <Label minHeight="-Infinity" minWidth="-Infinity" prefWidth="436.0" text="Поиск аргументации для утверждения" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="0" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
-              <font>
-                <Font size="18.0" />
-              </font>
-              <GridPane.margin>
-                <Insets bottom="10.0" top="10.0" />
-              </GridPane.margin>
-            </Label>
-            <VBox prefHeight="204.0" prefWidth="600.0" GridPane.columnIndex="0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.vgrow="ALWAYS">
-              <children>
-                <StackPane fx:id="stackPane" prefHeight="176.0" prefWidth="600.0" VBox.vgrow="ALWAYS">
-                  <children>
-                    <TableView fx:id="argumentTable">
-                      <StackPane.margin>
-                        <Insets />
-                      </StackPane.margin>
-                    </TableView>
-                  </children>
-                  <padding>
-                    <Insets />
-                  </padding>
-                </StackPane>
-              </children>
-            </VBox>
-            <TextField fx:id="statement" prefHeight="37.0" prefWidth="498.0" GridPane.columnIndex="0" GridPane.hgrow="NEVER" GridPane.rowIndex="1" GridPane.vgrow="SOMETIMES">
-              <GridPane.margin>
-                <Insets bottom="10.0" left="10.0" right="50.0" top="10.0" />
-              </GridPane.margin>
-            </TextField>
-            <Button minHeight="24.0" minWidth="26.0" mnemonicParsing="false" onMouseClicked="#searchForArguments" prefHeight="24.0" prefWidth="26.0" text="" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="1" GridPane.vgrow="SOMETIMES">
-              <GridPane.margin>
-                <Insets right="10.0" />
-              </GridPane.margin>
-            </Button>
-          </children>
-          <columnConstraints>
-            <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="734.0" />
-          </columnConstraints>
-          <rowConstraints>
-            <RowConstraints maxHeight="336.0" minHeight="10.0" prefHeight="46.0" vgrow="ALWAYS" />
-            <RowConstraints maxHeight="410.0" minHeight="10.0" prefHeight="62.0" vgrow="ALWAYS" />
-            <RowConstraints maxHeight="456.0" minHeight="10.0" prefHeight="456.0" vgrow="ALWAYS" />
-          </rowConstraints>
-          <HBox.margin>
-            <Insets />
-          </HBox.margin>
-        </GridPane>
-      </children>
-    </HBox>
-  </children>
+<AnchorPane prefHeight="564.0" prefWidth="948.0" xmlns:fx="http://javafx.com/fxml/1"
+            xmlns="http://javafx.com/javafx/2.2" fx:controller="ru.nsu.usova.dipl.controller.SearchController">
+    <children>
+        <HBox id="AnchorPane" prefHeight="503.0" prefWidth="900.0" AnchorPane.bottomAnchor="0.0"
+              AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <children>
+                <GridPane prefHeight="503.0" prefWidth="900.0" HBox.hgrow="ALWAYS">
+                    <children>
+                        <Label minHeight="-Infinity" minWidth="-Infinity" prefWidth="436.0"
+                               text="Поиск аргументации для утверждения" GridPane.columnIndex="0"
+                               GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="0"
+                               GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
+                            <font>
+                                <Font size="18.0"/>
+                            </font>
+                            <GridPane.margin>
+                                <Insets bottom="10.0" top="10.0"/>
+                            </GridPane.margin>
+                        </Label>
+                        <VBox prefHeight="204.0" prefWidth="600.0" GridPane.columnIndex="0" GridPane.hgrow="ALWAYS"
+                              GridPane.rowIndex="2" GridPane.vgrow="ALWAYS">
+                            <children>
+                                <StackPane fx:id="stackPane" prefHeight="176.0" prefWidth="600.0" VBox.vgrow="ALWAYS">
+                                    <children>
+                                        <TableView fx:id="argumentTable">
+                                            <StackPane.margin>
+                                                <Insets/>
+                                            </StackPane.margin>
+                                        </TableView>
+                                    </children>
+                                    <padding>
+                                        <Insets/>
+                                    </padding>
+                                </StackPane>
+                            </children>
+                        </VBox>
+                        <TextField fx:id="statement" prefHeight="37.0" prefWidth="498.0" GridPane.columnIndex="0"
+                                   GridPane.hgrow="NEVER" GridPane.rowIndex="1" GridPane.vgrow="SOMETIMES">
+                            <GridPane.margin>
+                                <Insets bottom="10.0" left="10.0" right="50.0" top="10.0"/>
+                            </GridPane.margin>
+                        </TextField>
+                        <Button minHeight="24.0" minWidth="26.0" mnemonicParsing="false"
+                                onMouseClicked="#searchForArguments" prefHeight="24.0" prefWidth="26.0" text=""
+                                GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.hgrow="SOMETIMES"
+                                GridPane.rowIndex="1" GridPane.vgrow="SOMETIMES">
+                            <GridPane.margin>
+                                <Insets right="10.0"/>
+                            </GridPane.margin>
+                        </Button>
+                    </children>
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="734.0"/>
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints maxHeight="336.0" minHeight="10.0" prefHeight="46.0" vgrow="ALWAYS"/>
+                        <RowConstraints maxHeight="410.0" minHeight="10.0" prefHeight="62.0" vgrow="ALWAYS"/>
+                        <RowConstraints maxHeight="456.0" minHeight="10.0" prefHeight="456.0" vgrow="ALWAYS"/>
+                    </rowConstraints>
+                    <HBox.margin>
+                        <Insets/>
+                    </HBox.margin>
+                </GridPane>
+            </children>
+        </HBox>
+    </children>
 </AnchorPane>
